# prime_Liu_Yixin

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_yl5418/: __init__.py  prime_yl5418.py
tests/: test_prime_yl5418.py
