[tool.poetry]
name = "prime_yl5418"
version = "0.1.0"
description = "Python Package for hw_07 from Yixin Jack Liu"
authors = ["Yixin Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
