[tool.poetry]
name = "prime_yl5418"
version = "0.1.0"
description = "Python Package for hw_07 from Yixin Jack Liu"
authors = ["Yixin Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "7.2.6"
myst-nb = "^1.0.0rc0"
autoapi = "^2.0.1"
sphinx-autoapi = "3.0.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "1.0.0rc0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
